<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.meizu</groupId>
  <artifactId>simplify-framework</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>精简程序框架</name>
  <description>精简的程序框架，可以用于简化web和服务端程序的开发</description>
  <modules>
  	<module>ioc</module>
  	<module>utils</module>
  	<module>caches</module>
  	<module>webcache</module>
  	<module>mvc</module>
  	<module>cache-redis</module>
  	<module>dao</module>
  	<module>aop</module>
  	<module>weaving</module>
  	<module>encrypt</module>
  	<module>stress-tester</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>http://10.2.67.20:8081/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>http://10.2.67.20:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<repositories>
	  	<!-- 仓库地址，从上往下进行查找。 -->
	
		<!-- 如有私服,打开私服地址-->
		<repository>
			<id>nexus</id>
	  		<name>internal nexus repository</name>
	  		<url>http://10.2.67.20:8081/nexus/content/groups/public</url>
		</repository>
		
		<repository>
            <id>oschina</id>
            <name>Oschina Releases</name>
            <url>http://maven.oschina.net/content/groups/public</url>
        </repository>
        
		<repository> 
			<id>simpleify</id> 
			<name>simpleify beta</name>
			<url>https://raw.github.com/simpleify/repository/master</url>
		</repository>
		
	</repositories>
	
	<pluginRepositories> 
	
		<!-- 如有私服,打开私服地址-->
		<pluginRepository>
			<id>nexus</id>
	  		<name>internal nexus repository</name>
	  		<url>http://10.2.67.20:8081/nexus/content/groups/public</url>
		</pluginRepository>
		
		<pluginRepository>
            <id>oschina</id>
            <name>Oschina Releases</name>
            <url>http://maven.oschina.net/content/groups/public</url>
        </pluginRepository>
		
	</pluginRepositories> 
	
  <dependencies>
  		<!-- 签名加密 -->
  		<dependency>
			<groupId>com.meizu</groupId>
			<artifactId>encrypt</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<!-- 日志相关 begin -->
		<!-- slf4j启用彩色日志jansi -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.13</version>
		</dependency>
		<!-- logback日志start -->
		<dependency> 
		    <groupId>ch.qos.logback</groupId> 
		    <artifactId>logback-core</artifactId> 
		    <version>1.1.3</version> 
		</dependency> 
		<dependency> 
		    <groupId>ch.qos.logback</groupId> 
		    <artifactId>logback-classic</artifactId> 
		    <version>1.1.3</version> 
		</dependency> 
		<!-- logback日志end -->
		
		
		<!-- 日志相关 end -->
	    <!-- 测试相关start -->
	    <!-- 压力测试 -->
	    <dependency>
			<groupId>com.meizu</groupId>
			<artifactId>stress-tester</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
	    <!-- 单元测试 -->
  		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		
		<!-- 测试相关end -->
  </dependencies>
  <build>
    <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
			<source>1.8</source>
			<target>1.8</target>
			</configuration>
		</plugin>
		<!-- 解决maven test命令时console出现中文乱码乱码 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<!-- forkMode 可设置值有 “never”， “once”， “always” 和 “pertest” -->
					<!-- pretest： 每一个测试创建一个新进程，为每个测试创建新的JVM是单独测试的最彻底方式，但也是最慢的，不适合hudson上持续回归
						 once：在一个进程中进行所有测试。once为默认设置，在Hudson上持续回归时建议使用默认设置。
						 always：在一个进程中并行的运行脚本，Junit4.7以上版本才可以使用，surefire的版本要在2.6以上提供这个功能，其中 threadCount：执行时，指定可分配的线程数量。只和参数parallel配合使用有效。默认：5 -->
					<forkMode>always</forkMode>
					<parallel>methods</parallel>
					<threadCount>4</threadCount>
					<!-- <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine> -->
 					<argLine>-Dfile.encoding=UTF-8</argLine> 
 					<excludes>  
	                  <exclude>**/TestAll.java</exclude>  
	                </excludes> 
 					<!-- cobertura统计单元测试覆盖率 -->
					<!-- <systemProperties>
						<property>
							<name>net.sourceforge.cobertura.datafile</name>
							<value>target/cobertura/cobertura.ser</value>
						</property>
					</systemProperties> -->
				</configuration>
			</plugin>
    </plugins>
    <resources>
		<resource>
			<directory>src/main/resources</directory>
			<includes>
			<include>**/*.xml</include>
			<include>**/*.properties</include>
			</includes>
			<filtering>true</filtering>
		</resource>
		<resource>
			<directory>src/main/java</directory>
			<includes>
			<include>**/*.xml</include>
			<include>**/*.properties</include>
			</includes>
			<filtering>true</filtering>
		</resource>
	</resources>
    
  </build>
</project>